set(crayg_SRCS
    # cmake-format: sortable
    crayg/compatibility/lodepng/fmt/LodePNG_formatter.cpp
    crayg/compatibility/lodepng/fmt/LodePNG_formatter.h
    crayg/compatibility/openexr/fmt/ImathBox_formatter.cpp
    crayg/compatibility/openexr/fmt/ImathBox_formatter.cpp
    crayg/compatibility/openexr/fmt/ImathBox_formatter.h
    crayg/compatibility/openexr/fmt/ImfCompression_formatter.cpp
    crayg/compatibility/openexr/fmt/ImfCompression_formatter.h
    crayg/compatibility/openexr/fmt/ImfPixelType_formatter.cpp
    crayg/compatibility/openexr/fmt/ImfPixelType_formatter.h
    crayg/compatibility/usd/fmt/SdfPath_formatter.h
    crayg/compatibility/usd/fmt/SdfValueTypeName_formatter.h
    crayg/compatibility/usd/fmt/TfToken_formatter.h
    crayg/compatibility/usd/fmt/UsdStagePtr_formatter.h
    crayg/foundation/areaiterators/AreaIterators.h
    crayg/foundation/areaiterators/ScanlineIterator.h
    crayg/foundation/areaiterators/tiles/HilbertSequence.cpp
    crayg/foundation/areaiterators/tiles/HilbertSequence.h
    crayg/foundation/areaiterators/tiles/MortonSequence.cpp
    crayg/foundation/areaiterators/tiles/MortonSequence.h
    crayg/foundation/areaiterators/tiles/ScanlineSequence.cpp
    crayg/foundation/areaiterators/tiles/ScanlineSequence.h
    crayg/foundation/areaiterators/tiles/SpiralSequence.cpp
    crayg/foundation/areaiterators/tiles/SpiralSequence.h
    crayg/foundation/areaiterators/tiles/tilequeues/FollowMouseTileQueue.cpp
    crayg/foundation/areaiterators/tiles/tilequeues/FollowMouseTileQueue.h
    crayg/foundation/areaiterators/tiles/tilequeues/FollowSequenceTileQueue.cpp
    crayg/foundation/areaiterators/tiles/tilequeues/FollowSequenceTileQueue.h
    crayg/foundation/areaiterators/tiles/tilequeues/TileQueue.cpp
    crayg/foundation/areaiterators/tiles/tilequeues/TileQueue.h
    crayg/foundation/areaiterators/tiles/tilequeues/TileQueueMode.h
    crayg/foundation/areaiterators/tiles/TileSequence.h
    crayg/foundation/areaiterators/tiles/TileSequences.cpp
    crayg/foundation/areaiterators/tiles/TileSequences.h
    crayg/foundation/areaiterators/tiles/TileSequenceType.cpp
    crayg/foundation/areaiterators/tiles/TileSequenceType.h
    crayg/foundation/assertions/Preconditions.h
    crayg/foundation/containers/Array2d.h
    crayg/foundation/enums/EnumFormatter.h
    crayg/foundation/enums/EnumParser.h
    crayg/foundation/enums/ValueMapper.h
    crayg/foundation/exceptions/Exceptions.cpp
    crayg/foundation/exceptions/Exceptions.h
    crayg/foundation/executable/CraygMain.h
    crayg/foundation/filesystem/FileAsString.cpp
    crayg/foundation/filesystem/FileAsString.h
    crayg/foundation/logging/Logger.cpp
    crayg/foundation/logging/Logger.h
    crayg/foundation/math/CommonMath.h
    crayg/foundation/math/geometry/Bound2d.cpp
    crayg/foundation/math/geometry/Bound2d.h
    crayg/foundation/math/geometry/BoundingBox.cpp
    crayg/foundation/math/geometry/BoundingBox.h
    crayg/foundation/math/geometry/Color.cpp
    crayg/foundation/math/geometry/Color.h
    crayg/foundation/math/geometry/Color_formatter.h
    crayg/foundation/math/geometry/Gradient.h
    crayg/foundation/math/geometry/Matrix4x4f.cpp
    crayg/foundation/math/geometry/Matrix4x4f.h
    crayg/foundation/math/geometry/OrthonormalBasis.cpp
    crayg/foundation/math/geometry/OrthonormalBasis.h
    crayg/foundation/math/geometry/Ray.cpp
    crayg/foundation/math/geometry/Ray.h
    crayg/foundation/math/geometry/Resolution.cpp
    crayg/foundation/math/geometry/Resolution.h
    crayg/foundation/math/geometry/Tile.cpp
    crayg/foundation/math/geometry/Tile.h
    crayg/foundation/math/geometry/Transform.cpp
    crayg/foundation/math/geometry/Transform.h
    crayg/foundation/math/geometry/Vector2.h
    crayg/foundation/math/geometry/Vector2_formatter.h
    crayg/foundation/math/geometry/Vector3f.cpp
    crayg/foundation/math/geometry/Vector3f.h
    crayg/foundation/math/geometry/Vector3f_formatter.h
    crayg/foundation/math/QuadraticEquations.h
    crayg/foundation/numerics/AtomicFloats.h
    crayg/foundation/numerics/BitCast.h
    crayg/foundation/objects/DtoUtils.h
    crayg/foundation/objects/ToStringHelper.h
    crayg/foundation/parallel/ParallelLoops.h
    crayg/foundation/parallel/ThreadCount.cpp
    crayg/foundation/parallel/ThreadCount.h
    crayg/foundation/progress/RemainingTimeCalculator.cpp
    crayg/foundation/progress/RemainingTimeCalculator.h
    crayg/foundation/progress/StopWatch.cpp
    crayg/foundation/progress/StopWatch.h
    crayg/foundation/progress/TaskReporter.cpp
    crayg/foundation/progress/TaskReporter.h
    crayg/foundation/reporting/Heatmap.cpp
    crayg/foundation/reporting/Heatmap.h
    crayg/foundation/strings/CommentStripper.cpp
    crayg/foundation/strings/CommentStripper.h
    crayg/foundation/strings/Humanize.cpp
    crayg/foundation/strings/Humanize.h
    crayg/foundation/strings/NumberParsing.cpp
    crayg/foundation/strings/NumberParsing.h
    crayg/foundation/tracing/CraygTracing.h
    crayg/testfoundation/fixtures/TemporaryDirectory.cpp
    crayg/testfoundation/fixtures/TemporaryDirectory.h
    CraygInfo.cpp
    CraygInfo.h
    image/ColorConversion.cpp
    image/ColorConversion.h
    image/film/buffers/FilmAccumulationBuffer.h
    image/film/buffers/FilmBufferBase.h
    image/film/buffers/FilmBufferFactory.cpp
    image/film/buffers/FilmBufferFactory.h
    image/film/buffers/FilmBufferType.cpp
    image/film/buffers/FilmBufferType.h
    image/film/buffers/FilmBufferVariants.cpp
    image/film/buffers/FilmBufferVariants.h
    image/film/buffers/FilmSumBuffer.h
    image/film/buffers/FilmValueBuffer.h
    image/film/buffers/FilmValueTrait.h
    image/film/Film.cpp
    image/film/Film.h
    image/film/FilmSpec.cpp
    image/film/FilmSpec.h
    image/Image.cpp
    image/Image.h
    image/ImageAlgorithms.cpp
    image/ImageAlgorithms.h
    image/ImageChannelPathResolver.cpp
    image/ImageChannelPathResolver.h
    image/ImageMetadata.cpp
    image/ImageMetadata.h
    image/ImageMetadataValue.h
    image/ImageSpec.cpp
    image/ImageSpec.h
    image/ImageTile.cpp
    image/ImageTile.h
    image/io/imageformatwriters/BaseImageFormatWriteOptions.h
    image/io/imageformatwriters/exr/OpenExrFormatWriteOptions.cpp
    image/io/imageformatwriters/exr/OpenExrFormatWriteOptions.h
    image/io/imageformatwriters/exr/OpenExrImageFormatWriter.cpp
    image/io/imageformatwriters/exr/OpenExrImageFormatWriter.h
    image/io/imageformatwriters/ImageBufferTypeTrait.h
    image/io/imageformatwriters/ImageFormatWriteOptions.h
    image/io/imageformatwriters/ImageFormatWriter.h
    image/io/imageformatwriters/ImageFormatWriters.cpp
    image/io/imageformatwriters/ImageFormatWriters.h
    image/io/imageformatwriters/png/PngImageFormatWriteOptions.cpp
    image/io/imageformatwriters/png/PngImageFormatWriteOptions.h
    image/io/imageformatwriters/png/PngImageFormatWriter.cpp
    image/io/imageformatwriters/png/PngImageFormatWriter.h
    image/PixelBuffer.cpp
    image/PixelBuffer.h
    image/PixelFormat.cpp
    image/PixelFormat.h
    image/UnsupportedPixelFormat.h
    Initialization.cpp
    Initialization.cpp
    Initialization.h
    Initialization.h
    renderer/FlareRenderer.cpp
    renderer/FlareRenderer.h
    renderer/GeometryCompiler.cpp
    renderer/GeometryCompiler.h
    renderer/ImageMetadataCollector.cpp
    renderer/ImageMetadataCollector.h
    renderer/integrators/AbstractIntegrator.cpp
    renderer/integrators/AbstractIntegrator.h
    renderer/integrators/AmbientOcclusionIntegrator.cpp
    renderer/integrators/AmbientOcclusionIntegrator.h
    renderer/integrators/DebugIntegrator.cpp
    renderer/integrators/DebugIntegrator.h
    renderer/integrators/IntegratorFactory.cpp
    renderer/integrators/IntegratorFactory.h
    renderer/integrators/IntegratorSettings.cpp
    renderer/integrators/IntegratorSettings.h
    renderer/integrators/IntegratorSettingsValue.h
    renderer/integrators/IntegratorType.cpp
    renderer/integrators/IntegratorType.h
    renderer/integrators/RaytracingIntegrator.cpp
    renderer/integrators/RaytracingIntegrator.h
    renderer/integrators/SurfaceInteraction.cpp
    renderer/integrators/SurfaceInteraction.h
    renderer/intersectors/embree/EmbreeBvh.cpp
    renderer/intersectors/embree/EmbreeBvh.h
    renderer/intersectors/embree/EmbreeBvhBuilder.cpp
    renderer/intersectors/embree/EmbreeBvhBuilder.h
    renderer/intersectors/embree/EmbreeSceneIntersector.cpp
    renderer/intersectors/embree/EmbreeSceneIntersector.h
    renderer/intersectors/embree/EmbreeUtils.cpp
    renderer/intersectors/embree/EmbreeUtils.h
    renderer/intersectors/IntersectorFactory.cpp
    renderer/intersectors/IntersectorFactory.h
    renderer/intersectors/IntersectorType.cpp
    renderer/intersectors/IntersectorType.h
    renderer/intersectors/SceneIntersector.h
    renderer/outputdrivers/NextGenOutputDriver.cpp
    renderer/outputdrivers/NextGenOutputDriver.cpp
    renderer/outputdrivers/NextGenOutputDriver.h
    renderer/Renderer.cpp
    renderer/Renderer.h
    renderer/SampleAccumulator.cpp
    renderer/SampleAccumulator.h
    renderer/sampling/Random.cpp
    renderer/sampling/Random.h
    renderer/sampling/Sampling.cpp
    renderer/sampling/Sampling.h
    renderer/TextureStats.cpp
    renderer/TextureStats.h
    renderer/tilesamplers/AdaptiveTileSampler.cpp
    renderer/tilesamplers/AdaptiveTileSampler.h
    renderer/tilesamplers/TileSampler.cpp
    renderer/tilesamplers/TileSampler.h
    renderer/tilesamplers/TileSamplerFactory.cpp
    renderer/tilesamplers/TileSamplerFactory.h
    renderer/tilesamplers/TileSamplerType.cpp
    renderer/tilesamplers/TileSamplerType.h
    renderer/tilesamplers/UniformTileSampler.cpp
    renderer/tilesamplers/UniformTileSampler.h
    renderer/TileSizeEstimator.cpp
    renderer/TileSizeEstimator.h
    renderer/TileStats.cpp
    renderer/TileStats.h
    scene/camera/Camera.cpp
    scene/camera/Camera.h
    scene/camera/CameraModel.h
    scene/camera/CameraModelFactory.cpp
    scene/camera/CameraModelFactory.h
    scene/camera/CameraType.cpp
    scene/camera/CameraType.h
    scene/camera/CameraUtils.cpp
    scene/camera/CameraUtils.h
    scene/camera/pinhole/PinholeCameraModel.cpp
    scene/camera/pinhole/PinholeCameraModel.h
    scene/camera/realistic/CameraLens.cpp
    scene/camera/realistic/CameraLens.h
    scene/camera/realistic/CameraLensMetadata.cpp
    scene/camera/realistic/CameraLensMetadata.h
    scene/camera/realistic/ExitPupil.cpp
    scene/camera/realistic/ExitPupil.h
    scene/camera/realistic/ExitPupilCalculator.cpp
    scene/camera/realistic/ExitPupilCalculator.h
    scene/camera/realistic/LensGeometry.cpp
    scene/camera/realistic/LensGeometry.h
    scene/camera/realistic/lensio/extendedformat/LensFileExtendedFormatReader.cpp
    scene/camera/realistic/lensio/extendedformat/LensFileExtendedFormatReader.h
    scene/camera/realistic/lensio/extendedformat/LensFileExtendedFormatWriter.cpp
    scene/camera/realistic/lensio/extendedformat/LensFileExtendedFormatWriter.h
    scene/camera/realistic/lensio/json/LensFileJsonReader.cpp
    scene/camera/realistic/lensio/json/LensFileJsonReader.h
    scene/camera/realistic/lensio/json/LensFileJsonWriter.cpp
    scene/camera/realistic/lensio/json/LensFileJsonWriter.h
    scene/camera/realistic/lensio/LensFileFormat.cpp
    scene/camera/realistic/lensio/LensFileFormat.h
    scene/camera/realistic/lensio/LensFileParseUtils.cpp
    scene/camera/realistic/lensio/LensFileParseUtils.h
    scene/camera/realistic/lensio/LensFileReader.cpp
    scene/camera/realistic/lensio/LensFileReader.h
    scene/camera/realistic/lensio/LensFileReaderFactory.cpp
    scene/camera/realistic/lensio/LensFileReaderFactory.h
    scene/camera/realistic/lensio/LensFileWriter.cpp
    scene/camera/realistic/lensio/LensFileWriter.h
    scene/camera/realistic/lensio/LensFileWriterFactory.cpp
    scene/camera/realistic/lensio/LensFileWriterFactory.h
    scene/camera/realistic/lensio/textfile/LensFileTextFileReader.cpp
    scene/camera/realistic/lensio/textfile/LensFileTextFileReader.h
    scene/camera/realistic/lensio/textfile/LensFileTextFileWriter.cpp
    scene/camera/realistic/lensio/textfile/LensFileTextFileWriter.h
    scene/camera/realistic/lensio/zmx/ZMXFileFormatReader.cpp
    scene/camera/realistic/lensio/zmx/ZMXFileFormatReader.h
    scene/camera/realistic/LensMaterial.cpp
    scene/camera/realistic/LensMaterial.h
    scene/camera/realistic/LensRaytracerTracer.cpp
    scene/camera/realistic/LensRaytracerTracer.h
    scene/camera/realistic/LensSurface.cpp
    scene/camera/realistic/LensSurface.h
    scene/camera/realistic/materials/LensMaterialConstants_ohara.h
    scene/camera/realistic/materials/LensMaterialConstants_schott.h
    scene/camera/realistic/materials/LensMaterialIds_ohara.h
    scene/camera/realistic/materials/LensMaterialIds_schott.h
    scene/camera/realistic/RealisticCameraModel.cpp
    scene/camera/realistic/RealisticCameraModel.h
    scene/camera/realistic/ThickLensApproximation.cpp
    scene/camera/realistic/ThickLensApproximation.h
    scene/camera/realistic/VariableLensDistances.cpp
    scene/camera/realistic/VariableLensDistances.h
    scene/camera/realistic/Wavelengths.cpp
    scene/camera/realistic/Wavelengths.h
    scene/camera/thinlens/ThinLensCameraModel.cpp
    scene/camera/thinlens/ThinLensCameraModel.h
    scene/Imageable.cpp
    scene/Imageable.h
    scene/io/read/SceneReader.cpp
    scene/io/read/SceneReader.h
    scene/io/read/usd/base/BaseUsdImageableReader.h
    scene/io/read/usd/base/BaseUsdLightReader.h
    scene/io/read/usd/base/BaseUsdReader.h
    scene/io/read/usd/base/BaseUsdShadingNodeReader.cpp
    scene/io/read/usd/base/BaseUsdShadingNodeReader.h
    scene/io/read/usd/base/BaseUsdXformableReader.h
    scene/io/read/usd/camera/UsdCameraReader.cpp
    scene/io/read/usd/camera/UsdCameraReader.h
    scene/io/read/usd/lights/UsdDiskLightReader.cpp
    scene/io/read/usd/lights/UsdDiskLightReader.h
    scene/io/read/usd/lights/UsdRectLightReader.cpp
    scene/io/read/usd/lights/UsdRectLightReader.h
    scene/io/read/usd/lights/UsdSphereLightReader.cpp
    scene/io/read/usd/lights/UsdSphereLightReader.h
    scene/io/read/usd/primitives/UsdMeshReader.cpp
    scene/io/read/usd/primitives/UsdMeshReader.h
    scene/io/read/usd/primitives/UsdPointInstancerReader.cpp
    scene/io/read/usd/primitives/UsdPointInstancerReader.h
    scene/io/read/usd/primitives/UsdSphereReader.cpp
    scene/io/read/usd/primitives/UsdSphereReader.h
    scene/io/read/usd/primitives/UsdSubdivisionSurfaceMeshReader.cpp
    scene/io/read/usd/primitives/UsdSubdivisionSurfaceMeshReader.h
    scene/io/read/usd/shadingnetworks/caches/UsdMaterialReadCache.cpp
    scene/io/read/usd/shadingnetworks/caches/UsdMaterialReadCache.h
    scene/io/read/usd/shadingnetworks/caches/UsdShadingNodeReadCache.cpp
    scene/io/read/usd/shadingnetworks/caches/UsdShadingNodeReadCache.h
    scene/io/read/usd/shadingnetworks/materials/UsdPreviewSurfaceReader.cpp
    scene/io/read/usd/shadingnetworks/materials/UsdPreviewSurfaceReader.h
    scene/io/read/usd/shadingnetworks/shadingnodes/UsdCheckerBoardReader.cpp
    scene/io/read/usd/shadingnetworks/shadingnodes/UsdCheckerBoardReader.h
    scene/io/read/usd/shadingnetworks/shadingnodes/UsdColorToFloatReader.cpp
    scene/io/read/usd/shadingnetworks/shadingnodes/UsdColorToFloatReader.h
    scene/io/read/usd/shadingnetworks/shadingnodes/UsdConstantShadingNodeReaders.cpp
    scene/io/read/usd/shadingnetworks/shadingnodes/UsdConstantShadingNodeReaders.h
    scene/io/read/usd/shadingnetworks/shadingnodes/UsdConversionNodesReaders.cpp
    scene/io/read/usd/shadingnetworks/shadingnodes/UsdConversionNodesReaders.h
    scene/io/read/usd/shadingnetworks/shadingnodes/UsdFileTextureReader.cpp
    scene/io/read/usd/shadingnetworks/shadingnodes/UsdFileTextureReader.h
    scene/io/read/usd/shadingnetworks/shadingnodes/UsdPrimVarReaderReaders.cpp
    scene/io/read/usd/shadingnetworks/shadingnodes/UsdPrimVarReaderReaders.h
    scene/io/read/usd/shadingnetworks/UsdShadingNodeReadUtils.cpp
    scene/io/read/usd/shadingnetworks/UsdShadingNodeReadUtils.h
    scene/io/read/usd/UsdRenderSettingsReader.cpp
    scene/io/read/usd/UsdRenderSettingsReader.h
    scene/io/read/usd/UsdSceneReader.cpp
    scene/io/read/usd/UsdSceneReader.h
    scene/io/read/usd/UsdStageReader.cpp
    scene/io/read/usd/UsdStageReader.h
    scene/io/SceneReaderFactory.cpp
    scene/io/SceneReaderFactory.h
    scene/io/SceneWriterFactory.cpp
    scene/io/SceneWriterFactory.h
    scene/io/usd/UsdConversions.cpp
    scene/io/usd/UsdConversions.h
    scene/io/usd/UsdLensFileUtils.cpp
    scene/io/usd/UsdLensFileUtils.h
    scene/io/usd/UsdReadUtils.cpp
    scene/io/usd/UsdReadUtils.h
    scene/io/usd/UsdTypeUtil.h
    scene/io/usd/UsdUtils.h
    scene/io/write/SceneWriter.cpp
    scene/io/write/SceneWriter.h
    scene/io/write/usd/base/BaseUsdLightWriter.h
    scene/io/write/usd/base/BaseUsdMaterialWriter.h
    scene/io/write/usd/base/BaseUsdSceneObjectWriter.h
    scene/io/write/usd/base/BaseUsdShadingNodeWriter.h
    scene/io/write/usd/base/BaseUsdTransformableWriter.h
    scene/io/write/usd/base/BaseUsdWriter.h
    scene/io/write/usd/camera/UsdCameraWriter.cpp
    scene/io/write/usd/camera/UsdCameraWriter.h
    scene/io/write/usd/lights/UsdDiskLightWriter.cpp
    scene/io/write/usd/lights/UsdDiskLightWriter.h
    scene/io/write/usd/lights/UsdPointLightWriter.cpp
    scene/io/write/usd/lights/UsdPointLightWriter.h
    scene/io/write/usd/lights/UsdRectLightWriter.cpp
    scene/io/write/usd/lights/UsdRectLightWriter.h
    scene/io/write/usd/primitives/UsdGroundPlaneWriter.cpp
    scene/io/write/usd/primitives/UsdGroundPlaneWriter.h
    scene/io/write/usd/primitives/UsdPointInstancerWriter.cpp
    scene/io/write/usd/primitives/UsdPointInstancerWriter.h
    scene/io/write/usd/primitives/UsdSphereWriter.cpp
    scene/io/write/usd/primitives/UsdSphereWriter.h
    scene/io/write/usd/primitives/UsdSubdivisionSurfaceMeshWriter.cpp
    scene/io/write/usd/primitives/UsdSubdivisionSurfaceMeshWriter.h
    scene/io/write/usd/primitives/UsdTriangleMeshWriter.cpp
    scene/io/write/usd/primitives/UsdTriangleMeshWriter.h
    scene/io/write/usd/shadingnetworks/caches/UsdMaterialWriteCache.cpp
    scene/io/write/usd/shadingnetworks/caches/UsdMaterialWriteCache.h
    scene/io/write/usd/shadingnetworks/caches/UsdShadingNodeWriteCache.cpp
    scene/io/write/usd/shadingnetworks/caches/UsdShadingNodeWriteCache.h
    scene/io/write/usd/shadingnetworks/materials/UsdPreviewSurfaceWriter.cpp
    scene/io/write/usd/shadingnetworks/materials/UsdPreviewSurfaceWriter.h
    scene/io/write/usd/shadingnetworks/shadingnodes/UsdCheckerBoardWriter.cpp
    scene/io/write/usd/shadingnetworks/shadingnodes/UsdCheckerBoardWriter.h
    scene/io/write/usd/shadingnetworks/shadingnodes/UsdColorToFloatWriter.cpp
    scene/io/write/usd/shadingnetworks/shadingnodes/UsdColorToFloatWriter.h
    scene/io/write/usd/shadingnetworks/shadingnodes/UsdConstantShadingNodeWriters.cpp
    scene/io/write/usd/shadingnetworks/shadingnodes/UsdConstantShadingNodeWriters.h
    scene/io/write/usd/shadingnetworks/shadingnodes/UsdConversionNodeWriters.cpp
    scene/io/write/usd/shadingnetworks/shadingnodes/UsdConversionNodeWriters.h
    scene/io/write/usd/shadingnetworks/shadingnodes/UsdFileTextureWriter.cpp
    scene/io/write/usd/shadingnetworks/shadingnodes/UsdFileTextureWriter.cpp
    scene/io/write/usd/shadingnetworks/shadingnodes/UsdFileTextureWriter.h
    scene/io/write/usd/shadingnetworks/shadingnodes/UsdPrimVarReaderWriters.cpp
    scene/io/write/usd/shadingnetworks/shadingnodes/UsdPrimVarReaderWriters.cpp
    scene/io/write/usd/UsdPathFactory.cpp
    scene/io/write/usd/UsdPathFactory.h
    scene/io/write/usd/UsdRenderSettingsWriter.cpp
    scene/io/write/usd/UsdRenderSettingsWriter.h
    scene/io/write/usd/UsdSceneWriter.cpp
    scene/io/write/usd/UsdSceneWriter.h
    scene/lights/AreaLight.cpp
    scene/lights/AreaLight.h
    scene/lights/DiskLight.cpp
    scene/lights/DiskLight.h
    scene/lights/Light.cpp
    scene/lights/Light.h
    scene/lights/RectLight.cpp
    scene/lights/RectLight.h
    scene/lights/shapegenerators/AbstractLightShapeGenerator.cpp
    scene/lights/shapegenerators/AbstractLightShapeGenerator.h
    scene/lights/shapegenerators/DiskLightShapeGenerator.cpp
    scene/lights/shapegenerators/DiskLightShapeGenerator.h
    scene/lights/shapegenerators/RectLightShapeGenerator.cpp
    scene/lights/shapegenerators/RectLightShapeGenerator.h
    scene/primitives/GroundPlane.cpp
    scene/primitives/GroundPlane.h
    scene/primitives/PointInstancer.cpp
    scene/primitives/PointInstancer.h
    scene/primitives/Sphere.cpp
    scene/primitives/Sphere.h
    scene/primitives/subdivisionsurfacemesh/FanTriangulator.cpp
    scene/primitives/subdivisionsurfacemesh/FanTriangulator.h
    scene/primitives/subdivisionsurfacemesh/OpenSubdivRefiner.cpp
    scene/primitives/subdivisionsurfacemesh/OpenSubdivRefiner.h
    scene/primitives/subdivisionsurfacemesh/SubdivisionSurfaceMesh.cpp
    scene/primitives/subdivisionsurfacemesh/SubdivisionSurfaceMesh.h
    scene/primitives/trianglemesh/BarycentricCoordinates.cpp
    scene/primitives/trianglemesh/BarycentricCoordinates.h
    scene/primitives/trianglemesh/primvars/PrimVarType.cpp
    scene/primitives/trianglemesh/primvars/PrimVarType.h
    scene/primitives/trianglemesh/primvars/TriangleMeshAbstractPrimVar.h
    scene/primitives/trianglemesh/primvars/TriangleMeshPerFacePrimVar.h
    scene/primitives/trianglemesh/primvars/TriangleMeshPerPointPrimVar.h
    scene/primitives/trianglemesh/primvars/TriangleMeshPerVertexPrimVar.h
    scene/primitives/trianglemesh/Triangle.cpp
    scene/primitives/trianglemesh/Triangle.h
    scene/primitives/trianglemesh/TriangleMesh.cpp
    scene/primitives/trianglemesh/TriangleMesh.h
    scene/primitives/trianglemesh/TriangleMeshConversion.cpp
    scene/primitives/trianglemesh/TriangleMeshConversion.h
    scene/RegionToRender.cpp
    scene/RegionToRender.h
    scene/RenderSettings.cpp
    scene/RenderSettings.h
    scene/Scene.cpp
    scene/Scene.h
    scene/SceneObject.cpp
    scene/SceneObject.h
    scene/shadingnetworks/materials/EmissiveMaterial.cpp
    scene/shadingnetworks/materials/EmissiveMaterial.h
    scene/shadingnetworks/materials/Material.cpp
    scene/shadingnetworks/materials/Material.h
    scene/shadingnetworks/materials/UsdPreviewSurface.cpp
    scene/shadingnetworks/materials/UsdPreviewSurface.h
    scene/shadingnetworks/ShadingNode.cpp
    scene/shadingnetworks/ShadingNode.h
    scene/shadingnetworks/shadingnodes/CheckerBoard.cpp
    scene/shadingnetworks/shadingnodes/CheckerBoard.h
    scene/shadingnetworks/shadingnodes/ColorToFloat.cpp
    scene/shadingnetworks/shadingnodes/ColorToFloat.h
    scene/shadingnetworks/shadingnodes/ConstantShadingNodes.cpp
    scene/shadingnetworks/shadingnodes/ConstantShadingNodes.h
    scene/shadingnetworks/shadingnodes/ConversionNodes.cpp
    scene/shadingnetworks/shadingnodes/ConversionNodes.h
    scene/shadingnetworks/shadingnodes/FileTexture.cpp
    scene/shadingnetworks/shadingnodes/FileTexture.h
    scene/shadingnetworks/shadingnodes/PrimVarReaders.cpp
    scene/shadingnetworks/shadingnodes/PrimVarReaders.h
    scene/Transformable.cpp
    scene/Transformable.h)

add_library(crayg STATIC ${crayg_SRCS})

target_include_directories(crayg PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

if(WIN32)
    target_compile_definitions(crayg PUBLIC NOMINMAX _USE_MATH_DEFINES)
endif()
target_compile_definitions(crayg PUBLIC MAGIC_ENUM_RANGE_MAX=256 CATCH_CONFIG_ENABLE_ALL_STRINGMAKERS=1
                                        TBB_PREVIEW_CONCURRENT_ORDERED_CONTAINERS=1)

add_custom_command(
    TARGET crayg
    PRE_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CONAN_LIB_DIRS_USD}/usd ${CMAKE_BINARY_DIR}/bin/usd)

target_link_libraries(
    crayg
    ${CONAN_LIBS}
    ${CMAKE_DL_LIBS}
    cpptrace
    gilbert
    minitrace
    text_encoding_detect)
